<resources>
    <string name="a">MyBrowser</string>
    <string name="url">URL</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="star">Star</string>
    <string name="tabs">Tabs</string>
    <string name="cookies">Cookies</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="private_tab">Private Tab</string>
    <string name="delete_all_ticked">delete All ticked</string>
    <string name="dateformat">dd/M/yyyy hh:mm:ss</string>
    <string name="short_by">short</string>
    <string name="searchbutton">searchButton</string>
    <string name="textview">TextView</string>
    <string name="close">close</string>
    <string name="close_current_tab">close current tab</string>
    <string name="special_cookies">Special Cookies</string>
    <string name="test">test</string>
    <string name="ok">ok</string>
    <string name="deleteallcookies">deleteAllCookies</string>
    <string name="cookieactivity">cookieActivity</string>
    <string name="listmycookies">listMyCookies</string>

</resources>
