<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/tabs"
        android:title="@string/tabs"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_filter_none"
        />
    <item
        android:id="@+id/star"
        android:title="@string/star"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_star_0"
        />

    <item
        android:id="@+id/action_paste"
        android:title="@string/cookies"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_ticket"
        />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/Bookmark"
        android:title="@string/bookmark"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/privatetab"
        android:title="@string/private_tab"
        app:showAsAction="ifRoom"
        />

</menu>